src/test/deca/context/invalid/provided/CastFloatToBoolean_error.deca
// Description:
//    Tentative de cast d’un `float` vers un `boolean` dans une condition.
//
// Résultats:
//    CastFloatToBoolean_error.deca:15:14: Incompatible types for explicit cast: float to boolean
//
// Historique:
//    créé le 19/01/2025
{
    float threshold = 10.5;
    int value = 5;
    boolean isValid;

    // Cast invalide d’un float en boolean
    isValid = (boolean) (threshold); 

    if (isValid && value > 2) {
        print("Condition vérifiée.");
    } else {
        print("Condition non vérifiée.");
    }
}
